--- a/views/admin/restaurants.handlebars
+++ b/views/admin/restaurants.handlebars
@@ -1,6 +1,17 @@
 <div>
   <h1>餐廳後台</h1>
 
+  <a href='/admin/restaurants'>
+    <button type="button" class="btn btn-link">Restaurants</button>
+  </a>
+  |
+  <a href='/admin/users'>
+    <button type="button" class="btn btn-link">Users</button>
+  </a>
+
+  <br/>
+  <br/>
+
   <a href='/admin/restaurants/create'>
     <button type="button" class="btn btn-primary">New Restaurant</button>
   </a>
