--- a/views/admin/restaurants.handlebars
+++ b/views/admin/restaurants.handlebars
@@ -8,6 +8,8 @@
   <a href='/admin/users'>
     <button type="button" class="btn btn-link">Users</button>
   </a>
+  |
+  <a href='/admin/categories'>Categories</a>
 
   <br/>
   <br/>
@@ -24,6 +26,7 @@
       <tr>
         <th scope="col">#</th>
         <th scope="col">Name</th>
+        <th scope="col">Category</th>
         <th scope="col">#</th>
       </tr>
     </thead>
@@ -32,6 +35,7 @@
       <tr>
         <th scope="row">{{this.id}}</th>
         <td>{{this.name}}</td>
+        <td>{{this.Category.name}}</td>
         <td>
           <button type="button" class="btn btn-link">
             <a href="/admin/restaurants/{{this.id}}">
