A9 - clmplete Like functionality

--- a/views/restaurant.handlebars
+++ b/views/restaurant.handlebars
@@ -16,13 +16,20 @@
   <div class="col-md-8">
     <p>{{restaurant.description}}</p>
     <br/><br/>
-    <a href="/restaurants/{{restaurant.id}}/dashboard" class="btn btn-primary">Dashboard</a>
+    <button onclick="location.href='/restaurants/{{restaurant.id}}/dashboard'" class="btn btn-primary">Dashboard</button>
     {{#if isFavorited }}
       <form action="/favorite/{{restaurant.id}}?_method=DELETE" method="POST" style="display: contents;"><button
           type="submit" class="btn btn-danger">移除最愛</button></form>
     {{else}}
-      <form action="/favorite/{{restaurant.id}}" method="POST" style="display: contents;"><button type="submit"
-          class="btn btn-primary">加到最愛</button></form>
+      <form action="/favorite/{{restaurant.id}}" method="POST" style="display: contents;">
+        <button type="submit" class="btn btn-primary">加到最愛</button></form>
+    {{/if}}
+    {{#if isLiked }}
+      <form action="/like/{{restaurant.id}}?_method=DELETE" method="POST" style="display: contents;">
+        <button type="submit" class="btn btn-danger">Unlike</button></form>
+    {{else}}
+      <form action="/like/{{restaurant.id}}" method="POST" style="display: contents;"><button type="submit"
+          class="btn btn-primary">Like</button></form>
     {{/if}}
   </div>
   <hr>
@@ -58,4 +65,4 @@
   <input type="hidden" name="restaurantId" value="{{restaurant.id}}" />
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
-<a href="javascript:history.back()">回上一頁</a>
+<a href="/restaurants">回上一頁</a>
